# TetrisRobot-xArm-ROS2

./: .gitattributes  .gitignore  LICENSE  README.md  THIRD_PARTY.md
.github/workflows/: ci.yml
config/: workcell.example.yaml
docs/: architecture.md  technical_report_summary.md
docs/images/: .gitkeep
scripts/: start_color.sh  start_pipeline.sh
scripts/calibration/: calibrate_pick.py  calibrate_place.py
src/block_sorter/: CMakeLists.txt  package.xml
src/block_sorter/data/: t.txt
src/block_sorter/include/block_sorter/: includeFiles.h  strategy.h
src/block_sorter/src/: move_service.cpp  sorter_node.cpp
src/block_sorter/srv/: MoveOnce.srv
src/color_detector/: CMakeLists.txt  package.xml
src/color_detector/include/color_detector/: ColorClassiFication.h  includeFiles.h  target.h
src/color_detector/msg/: DetectedTarget.msg  DetectedTargetArray.msg
src/color_detector/script/: classification.py  hsv_sample.py  k_means.py  np.py
src/color_detector/src/: ColorClassiFication.cpp  detection_node.cpp  target.cpp
src/xarm_api/src/: xarm_driver.cpp  xarm_driver_service.cpp
src/xarm_description/: CMakeLists.txt  package.xml
src/xarm_sdk/cxx/: ReadMe.md
src/xarm_sdk/cxx/doc/: xarm_cplus_api.md
tests/: check_markdown_links.py  test_repository_regressions.py
