<?xml version="1.0"?>
<package format="3">
  <name>xarm_description</name>
  <version>0.1.0</version>
  <description>The xarm_description package</description>
  <maintainer email="jason@ufactory.cc">Jason Peng</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
  </export>
</package>
